# khepri

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/khepri-app/: Cargo.toml
crates/khepri-app/src/: main.rs
crates/khepri-core/: Cargo.toml
crates/khepri-core/src/: assets.rs  config.rs  ecs.rs  lib.rs  renderer.rs  scene.rs
crates/khepri-editor/: Cargo.toml
crates/khepri-editor/src/: hierarchy.rs  lib.rs  panels.rs  properties.rs  title_bar.rs  viewport.rs  window_resize.rs
crates/khepri-hub/: Cargo.toml
crates/khepri-hub/src/: hub.rs  lib.rs  title_bar.rs  window_resize.rs
crates/khepri-storage/: Cargo.toml
crates/khepri-storage/src/: lib.rs  project.rs  recent.rs  scene_io.rs
docs/: roadmap.md
docs/dev-log/: 2026-05-30.md  2026-05-31.md  2026-06-01.md
docs/plans/: 2025-07-20-2d-scene-editor.md  2025-07-20-bare-bone-window.md  2025-07-20-bento-panels.md  2025-07-20-project-restructure.md  2026-05-31-khepri-hub-design.md  2026-05-31-project-storage-design.md  2026-06-01-component-system.md
