[package]
name = "khepri-hub"
version = "0.1.0"
edition = "2024"

[dependencies]
khepri-core = { path = "../khepri-core" }
khepri-storage = { path = "../khepri-storage" }
eframe = { version = "0.34", default-features = false, features = ["glow", "accesskit", "default_fonts", "wayland", "x11", "persistence"] }
rfd = "0.15"
